themedir=$(datadir)/openbox/themes

theme_DATA=artwiz bbs bluebox cthulhain deep ebox fieron fieron2 flux frobozz \
           frobust mbdtex miklos nyz nyzclone ob20 operation outcomes paper \
           purplehaaze shade steelblue steelblue2 the_orange trisb twice \
           warp-xp

MAINTAINERCLEANFILES=Makefile.in

distclean-local:
	$(RM) *\~ *.orig *.rej .\#*
