#buttonsdir = $(pkgdatadir)/buttons
MAINTAINERCLEANFILES = Makefile.in
#buttons_DATA =
               #fieron-bullet.xbm fieron-bulletl.xbm fieron-close.xbm \
               #fieron-icon.xbm fieron-max.xbm fieron-stick.xbm \
               #max.xbm stick.xbm icon.xbm close.xbm

#EXTRA_DIST = $(buttons_DATA)

distclean-local:
	$(RM) *\~ .\#*
#uninstall-am:
#	rmdir -p $(DESTDIR)$(buttonsdir) || true
